QtBeef/src/Qt/qevent.bf

extension CQt
{
	[LinkName("QSinglePointEvent_Delete")]
	public static extern void QSinglePointEvent_Delete(QSinglePointEvent_Ptr self);
	[LinkName("QSinglePointEvent_Clone")]
	public static extern void** QSinglePointEvent_Clone(void* self);
	[LinkName("QSinglePointEvent_Button")]
	public static extern Qt_MouseButton QSinglePointEvent_Button(void* self);
	[LinkName("QSinglePointEvent_Buttons")]
	public static extern void* QSinglePointEvent_Buttons(void* self);
	[LinkName("QSinglePointEvent_Position")]
	public static extern void* QSinglePointEvent_Position(void* self);
	[LinkName("QSinglePointEvent_ScenePosition")]
	public static extern void* QSinglePointEvent_ScenePosition(void* self);
	[LinkName("QSinglePointEvent_GlobalPosition")]
	public static extern void* QSinglePointEvent_GlobalPosition(void* self);
	[LinkName("QSinglePointEvent_IsBeginEvent")]
	public static extern bool QSinglePointEvent_IsBeginEvent(void* self);
	[LinkName("QSinglePointEvent_IsUpdateEvent")]
	public static extern bool QSinglePointEvent_IsUpdateEvent(void* self);
	[LinkName("QSinglePointEvent_IsEndEvent")]
	public static extern bool QSinglePointEvent_IsEndEvent(void* self);
	[LinkName("QSinglePointEvent_ExclusivePointGrabber")]
	public static extern void** QSinglePointEvent_ExclusivePointGrabber(void* self);
	[LinkName("QSinglePointEvent_SetExclusivePointGrabber")]
	public static extern void QSinglePointEvent_SetExclusivePointGrabber(void* self, void** exclusiveGrabber);
}
class QSinglePointEvent : IQSinglePointEvent, IQPointerEvent, IQInputEvent, IQEvent
{
	private QSinglePointEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QSinglePointEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public ~this()
	{
		CQt.QSinglePointEvent_Delete(this.ptr);
	}
	public QSinglePointEvent_Ptr Clone()
	{
		return QSinglePointEvent_Ptr(CQt.QSinglePointEvent_Clone((.)this.ptr.Ptr));
	}
	public Qt_MouseButton Button()
	{
		return CQt.QSinglePointEvent_Button((.)this.ptr.Ptr);
	}
	public void* Buttons()
	{
		return CQt.QSinglePointEvent_Buttons((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Position()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_Position((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScenePosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_ScenePosition((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_GlobalPosition((.)this.ptr.Ptr));
	}
	public bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public QObject_Ptr ExclusivePointGrabber()
	{
		return QObject_Ptr(CQt.QSinglePointEvent_ExclusivePointGrabber((.)this.ptr.Ptr));
	}
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber((.)this.ptr.Ptr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQSinglePointEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QEnterEvent
// --------------------------------------------------------------
[CRepr]
struct QEnterEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QEnterEvent_new")]
	public static extern QEnterEvent_Ptr QEnterEvent_new(void** localPos, void** scenePos, void** globalPos);
	[LinkName("QEnterEvent_new2")]
	public static extern QEnterEvent_Ptr QEnterEvent_new2(void** localPos, void** scenePos, void** globalPos, void** device);
	[LinkName("QEnterEvent_Delete")]
	public static extern void QEnterEvent_Delete(QEnterEvent_Ptr self);
	[LinkName("QEnterEvent_Clone")]
	public static extern void** QEnterEvent_Clone(void* self);
	[LinkName("QEnterEvent_Pos")]
	public static extern void* QEnterEvent_Pos(void* self);
	[LinkName("QEnterEvent_GlobalPos")]
	public static extern void* QEnterEvent_GlobalPos(void* self);
	[LinkName("QEnterEvent_X")]
	public static extern c_int QEnterEvent_X(void* self);
	[LinkName("QEnterEvent_Y")]
	public static extern c_int QEnterEvent_Y(void* self);
	[LinkName("QEnterEvent_GlobalX")]
	public static extern c_int QEnterEvent_GlobalX(void* self);
	[LinkName("QEnterEvent_GlobalY")]
	public static extern c_int QEnterEvent_GlobalY(void* self);
	[LinkName("QEnterEvent_LocalPos")]
	public static extern void* QEnterEvent_LocalPos(void* self);
	[LinkName("QEnterEvent_WindowPos")]
	public static extern void* QEnterEvent_WindowPos(void* self);
	[LinkName("QEnterEvent_ScreenPos")]
	public static extern void* QEnterEvent_ScreenPos(void* self);
}
